--- a/templates/passport/event_detail.html
+++ b/templates/passport/event_detail.html
@@ -34,7 +34,7 @@
 	
 	<p><br class="clearfloat" /></p>
 	<h3>About</h3>
-	{{event.summary}}
+	{{event.summary|safe}}
 </div>
 <!-- end #mainContent -->
 {% endblock %}
