--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -57,9 +57,9 @@
  <p><br class="clearfloat" />
 	</p> 
 	 <h3>About</h3>
-	<p>{{object.about_text}}</p>
+	<p>{{object.about_text|safe}}</p>
 <h3>Student Perspectives</h3>
-	<p>{{object.student_perspectives_text}}</p>
+	<p>{{object.student_perspectives_text|safe}}</p>
 </div>
 	<!-- end #mainContent -->
 {% endblock %}
