Ticket reservation functionality

--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -42,6 +42,7 @@ id="mainform">
 //<![CDATA[
 $j(document).ready(function() {InitTopMenu();});//]]>
 </script>
+</form>
   <div id="outer">
     <!-- Start: Drexel Sliver -->
     <div id="sliver-container"> <a tabindex="5" href="http://www.drexel.edu/" class="logo"><img 
