--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -1,4 +1,5 @@
 {% load cache %}
+{% load cache pages_tags %}
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head
@@ -91,7 +92,7 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
               <tbody>
                 <tr>
                   <td id="m1" class="first active"><a class="active" href="/">Home</a></td>
-                  <td id="m2" class=""><a href="#">About</a></td>
+                  <td id="m2" class=""><a href="{% show_absolute_url '/about' %}">About</a></td>
                   <td id="m3" class=""><a href="#">Institutions</a></td>
                   <td id="m4" class=""><a href="{% url passport.views.event_calendar %}">Calendar</a></td>
                   <td id="m5" class=""><a href="#">Columns</a></td>
@@ -175,7 +176,6 @@ alt="Drexel University" width="117" height="16"></a> <img src="/media/images/foo
     </div>
     <div class="ddm m5">
       <ul class="dm">
-        {% load cache pages_tags %}
 		{% load_pages %}
 		{% for page in pages_navigation %}
  		   {% pages_menu page %}
