--- a/templates/passport/index.html
+++ b/templates/passport/index.html
@@ -36,7 +36,7 @@
 				<p><a href="{% url passport.views.event_calendar %}">View the Calendar > </a></p>
    </div>
   
-        <div id="slide"> <img width="320" height="200" border="0" src="media/slide.jpg"></div>
+        <div id="slide"> <img width="320" height="200" border="0" src="media/images/slide.jpg"></div>
         <!--in the news-->
 	 <p><br class="clearfloat" />
 		</p>
