--- a/templates/passport/article.html
+++ b/templates/passport/article.html
@@ -12,7 +12,7 @@
 	</div>
 </div>
 <h2>{% show_content current_page "title" %}</h2>
-<div id="subhead">{% placeholder subheading with TextInput %}</div>
+<div id="subhead">{% placeholder subheading with CKEditor %}</div>
 <div id="byline">By {{ current_page.author.first_name  }} {{ current_page.author.last_name  }}</div>
 <div id="photoblock">{% imageplaceholder body-image as imgsrc %}<img src="{{ MEDIA_URL }}{{ imgsrc }}" border="0"
 	width="220" height="220" />
@@ -23,6 +23,6 @@
 </div>
 {% placeholder body with CKEditor %}
 <div id="bottombyline">
-<p>{% placeholder bottombyline with CKEditor %}</p>
+<p>{% placeholder bottombyline with TextInput %}</p>
 </div>
 {% endblock %}
