--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -40,7 +40,7 @@
 		<p>Monday-Friday: {{object.weekday_hours}}<br/>
 		Saturday-Sunday: {{object.weekend_hours }}</p>
 		<h3>Cost</h3>
-		<p>${{object.cost}}</p></div>
+		<p>{{object.cost}}</p></div>
 		<div id="vencolleft">
 					<div id="venuepic">
 				<img src="{{ MEDIA_URL }}{{object.pic}}" border="0" width="220" height="220"/>
