--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -147,10 +147,12 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
 
 	 <!--end right column-->
 	</div>
+	{% block wholeleftcol %}
 	<div id="leftcolsub">
     {% block leftcolsub%}
 	{% endblock %}
 	</div>
+	{% endblock %}
 	<p>
          <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats -->
       </p>
