--- a/templates/passport/venue_list.html
+++ b/templates/passport/venue_list.html
@@ -18,8 +18,7 @@
 		<h1><a href="{% url passport.views.venue_detail object.id %}">{{object.name}}</a></h1>
 		<div id="vencolright">
 				<h3>Hours of Operation</h3>
-				<p>Monday-Friday: {{object.weekday_hours}}<br/>
-				Saturday-Sunday: {{object.weekend_hours }}</p>
+				<p>{{object.hours}}</p>
 				<h3>Cost</h3>
 				<p>${{object.cost}}</p>
 		</div>
