--- a/templates/passport/venue_list.html
+++ b/templates/passport/venue_list.html
@@ -24,7 +24,7 @@
 		</div>
 		<div id="vencolleft">
 			<div id="venuepic">
-				<img src="{{ MEDIA_URL }}{{object.pic}}" border="0" width="220" height="220"/>
+				<img src="{{ MEDIA_URL }}{{object.thumbnail}}" />
 			</div>
 			{{object.phone}}<br/>
 			<a href="{{object.url}}">{{object.url}}</a>
