--- a/templates/passport/event_detail.html
+++ b/templates/passport/event_detail.html
@@ -16,9 +16,9 @@
 <div id="vencolleft">
 	<div id="venuepic">
 		{% if event.pic %} 
-			<img src="{{ MEDIA_URL}}{{event.pic}}" border="0" width="220" height="220" />
+			<img src="{{ MEDIA_URL}}{{event.pic}}" />
 		{% else %} 
-			<img src="{{ MEDIA_URL }}{{event.venue.pic}}" border="0" width="220" height="220" />
+			<img src="{{ MEDIA_URL }}{{event.venue.pic}}" />
 		{% endif %}
 	</div>
 	{{event.venue.phone}}<br />
