--- a/templates/passport/map.html
+++ b/templates/passport/map.html
@@ -1,6 +1,8 @@
 {% extends 'passport/base.html' %}
 
 {% block wholerightcolsub%}
+<div id="rightcol">
+
 {% endblock%}
 {% block head%}
 <script type="text/javascript"
