homepage & article images

--- a/templates/passport/article.html
+++ b/templates/passport/article.html
@@ -2,7 +2,7 @@
 {% load cache pages_tags %}
 {% load passport_tags %}
 {% load_pages %}
-{% imageplaceholder homepage_image as imgsrc %}
+{% imageplaceholder homepage_image as homepage_image %}
 {% placeholder homepage_subheading with CKEditor %}
 
 {%block leftcolsub %}
