--- a/media/styles/default.css
+++ b/media/styles/default.css
@@ -174,6 +174,8 @@ h4 {
 	margin:10px 0px 0px 0px;
 }
 .articlepic {
+	position: relative;
+	top: -25px;
 	width: 120px;
 	height: 120px;
 }
@@ -195,27 +197,23 @@ h4 {
 }
 .articlesec_arts {/*Colored block header with category ARTS*/
 	background: #f65044;
-	width: 375px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
 	margin-left: 120px;
 }
 .articlesec_science {/*Colored block header with category SCIENCE*/
 	background: #7da141;
-	width: 375px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
 	margin-left: 120px;
 	
 }
 .articlesec_history {/*Colored block header with category HISTORY*/
 	background: #012861;
-	width: 375px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
 	margin-left: 120px;
 
 }
-.articlesec_nature {/*Colored block header with category NATURE*/
+.articlesec_performances {/*Colored block header with category PERFORMANCES*/
 	background: #7092f7;
-	width: 375px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
 	margin-left: 120px;
 
