--- a/templates/passport/index.html
+++ b/templates/passport/index.html
@@ -4,10 +4,11 @@
 {% load passport_tags %}
 <div id='leftcol'>
 <h1>Your guide to Philadelphia's cultural scene.</h1>
+<p><br /></p>
 {% for article in article_list %}
 <div class="articleblock">
 	<div class="articlesec_{{article.get_root.title|lower}}">
-			<a style="font-size:18px;text-decoration:underline;color:#FFF " href="{% show_absolute_url article.get_root %}">{{article.get_root.title|safe}}</a>
+			<a  href="{% show_absolute_url article.get_root %}">{{article.get_root.title|safe}}</a>
 	</div>
 	<div class="articlepic">
 		<img height='120' width='120' src='/media/{% show_content article "homepage_image" %}'/>
