--- a/media/styles/subpage.css
+++ b/media/styles/subpage.css
@@ -151,7 +151,7 @@ padding:2px 2px 2px 8px;/*T, R, B, L*/
 	width: 665px;
 padding:2px 2px 2px 8px;/*T, R, B, L*/
 }
-#subarticlesec_nature {/*Colored block header with category NATURE*/
+#subarticlesec_performances {/*Colored block header with category NATURE*/
 	background: #7092f7;
 	width: 665px;
 	padding:2px 2px 2px 8px;/*T, R, B, L*/
