--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -50,7 +50,8 @@
 	<h3>Location</h3>
 	<p>
 		{{object.address}}<br />
-		{{object.city}},{{object.state}},{{object.zip}}<br />
+		{{object.city}},{{object.state}}<br />
+		{{object.zip}}<br />
 	</p>
 
  <p><br class="clearfloat" />
