--- a/templates/passport/reservation_detail.html
+++ b/templates/passport/reservation_detail.html
@@ -9,7 +9,7 @@
 {{object.ticket.event.date|date:"N j, Y, P"}}<br />
 {{object.ticket.event.venue.name}}<br />
 {{object.ticket.event.venue.phone}}<br />
-<a href="{{object.ticket.event.venue.url}}">{{object.ticket.event.venue.url}}<br />
+<a href="{{object.ticket.event.venue.url}}">{{object.ticket.event.venue.url}}</a><br />
 {{object.ticket.event.venue.address}}<br />
 {{object.ticket.event.venue.city}}<br />
 {{object.ticket.event.venue.state}}<br />
