--- a/templates/passport/reservation_detail.html
+++ b/templates/passport/reservation_detail.html
@@ -11,7 +11,7 @@
 {{object.ticket.event.venue.phone}}<br />
 <a href="{{object.ticket.event.venue.url}}">{{object.ticket.event.venue.url}}</a><br />
 {{object.ticket.event.venue.address}}<br />
-{{object.ticket.event.venue.city}}<br />
+{{object.ticket.event.venue.city}},
 {{object.ticket.event.venue.state}}<br />
 {{object.ticket.event.venue.zip}}<br />
 </p>
