--- a/templates/passport/venue_detail.html
+++ b/templates/passport/venue_detail.html
@@ -35,12 +35,12 @@
 {%endblock%}
 {%block leftcolsub %}
 <h1>{{object.name}}</h1>
-	<div id="vencolright">
+	<div class="vencolright">
 		<h3>Hours of Operation</h3>
 		<p>{{object.hours|safe}}</p>
 		<h3>Cost</h3>
 		<p>{{object.cost|safe}}</p></div>
-		<div id="vencolleft">
+		<div class="vencolleft">
 					<div id="venuepic">
 				<img src="{{ MEDIA_URL }}{{object.pic}}" border="0" />
 			</div>
