--- a/templates/passport/base.html
+++ b/templates/passport/base.html
@@ -1,20 +1,14 @@
 {% load cache %}
 {% load cache pages_tags %}
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head
- id="pageHead">
-<style type="text/css"></style>
+<head>
 <title>Drexel University | Cultural Passport</title>
-<meta id="ctl01" http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta id="ctl02" name="CODE_LANGUAGE" content="C#">
-<meta id="ctl03" name="vs_defaultClientScript" content="JavaScript">
-<meta id="ctl04" name="vs_targetSchema" 
-content="http://schemas.microsoft.com/intellisense/ie5">
-<link rel="canonical" href="http://drexel.edu/passport/">
-<link rel="stylesheet" type="text/css" href="/media/styles/default.css">
-<link rel="stylesheet" type="text/css" href="/media/styles/subpage.css">
-<link rel="Stylesheet" type="text/css" href="/media/styles/colors.css">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="/media/styles/default.css" />
+<link rel="stylesheet" type="text/css" href="/media/styles/subpage.css" />
+<link rel="Stylesheet" type="text/css" href="/media/styles/colors.css" />
 <script type="text/javascript" language="javascript" src="/media/js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" language="javascript" src="/media/js/jquery.hoverIntent.js"></script>
 <script type="text/javascript" language="javascript" src="/media/js/drexel.js"></script>
@@ -27,7 +21,7 @@ content="http://schemas.microsoft.com/intellisense/ie5">
         </style>
     <![endif]-->
 <link id="SliverStyles" type="text/css" rel="stylesheet" 
-href="/media/styles/sliver.css">
+href="/media/styles/sliver.css" />
 <!--[if IE 8]>    <body class="ie8"> <![endif]-->
 <!--[if IE 7]>    <body class="ie7"> <![endif]-->
 <!--[if IE 6]>    <body class="ie6"> <![endif]-->
@@ -48,16 +42,16 @@ $j(document).ready(function() {InitTopMenu();});//]]>
     <!-- Start: Drexel Sliver -->
     <div id="sliver-container"> <a tabindex="5" href="http://www.drexel.edu/" class="logo"><img 
 src="/media/images/drexel-logo-slice.gif" style="border-width: 0pt; 
-float: left; margin-left: 12px; margin-top: 0px;" alt="Drexel Home"></a>
+float: left; margin-left: 12px; margin-top: 0px;" alt="Drexel Home" /></a>
       <div id="utility-bar-sliver"> <a tabindex="6" href="http://www.drexel.edu/default.aspx" 
 class="none">Drexel Home</a> <a tabindex="7" 
 href="http://www.drexel.edu/guide/sitemap/default.aspx">Site Map</a> &nbsp; <span id="pageplaceholder_0_DrexelSliver_spanSearchContainer">
         <input class="search-box" id="tbSearch" name="tbSearch" 
 tabindex="8" size="12" title="Search drexel.edu" value="Search..." 
-type="text">
+type="text" />
         &nbsp; <a id="lnkSearch" class="tight none" 
 href="javascript:%20SearchClick();" tabindex="9"> <img src="media/images/round-yellow-button.png" alt="Go" 
-style="border-width: 0pt;" class="nudge hover"> </a> </span> &nbsp;&nbsp;
+style="border-width: 0pt;" class="nudge hover" /> </a> </span> &nbsp;&nbsp;
         <select tabindex="10" style="width: 172px;" id="sbGoTo" title="Go to 
 common destinations.">
           <option selected="selected" value="">Go to...</option>
@@ -72,7 +66,7 @@ common destinations.">
         </select>
         <a href="#" onclick="this.href = $j('#sbGoTo').val();" tabindex="11" 
 class="tight none"> <img src="media/images/round-yellow-button.png" alt="Go" 
-style="border-width: 0pt;" class="nudge hover"> </a> </div>
+style="border-width: 0pt;" class="nudge hover" /> </a> </div>
       <div class="micro-site-sliver-divider">
         <!-- -->
       </div>
@@ -166,8 +160,8 @@ style="border-width: 0pt;" class="nudge hover"> </a> </div>
     </div>
     <div id="footer"> <a href="http://www.drexel.edu/"><img 
 src="/media/images/footer-image-drexel-university.png" class="png du" 
-alt="Drexel University" width="117" height="16"></a> <img src="/media/images/footer-image-live-it.png" class="png live-it"
- alt="Live It" width="56" height="13">
+alt="Drexel University" width="117" height="16"/></a> <img src="/media/images/footer-image-live-it.png" class="png live-it"
+ alt="Live It" width="56" height="13"/>
       <p>Copyright © 2010, Drexel University, 3141 Chestnut Street, 
         Philadelphia, PA 19104, 215-895-2000, All Rights Reserved.</p>
     </div>
@@ -190,7 +184,6 @@ alt="Drexel University" width="117" height="16"></a> <img src="/media/images/foo
     </div>
     <!-- End: Top Menu Drops Downs -->
   </div>
-</form>
 <div id="ibox">
   <div id="ibox_overlay" style="display: none; opacity: 
 0; background-image: url(&quot;/sc_scripts/ibox/images/bg.png&quot;); 
