--- a/templates/passport/event_list.html
+++ b/templates/passport/event_list.html
@@ -3,12 +3,11 @@
 {% for event in object_list %}
 <div class="listblock">
 	<div class="listpic">
-		<img height='120' width='120' src='{{MEDIA_URL}}{{event.pic}}'/>
+		<img alt='' height='120' width='120' src='{{MEDIA_URL}}{{event.pic}}'/>
 	</div>
     <div class="listtxt">
     	<div class="articlelead"><a href="{% url passport.views.event_detail event.id %}">{{event.name}} at {{event.venue}}</a></div>
     	<div class="leadbyline">{{event.date|date:"N j, Y, P"}}</div>
-    	<p>
     </div>
 </div>
 {% endfor%}
